--- a/story.html
+++ b/story.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
-  <div class="container mx-auto px-4 py-6">
+  <div class="container mx-auto px-4 py-6 max-w-2xl">
     <!-- Header with back-link and logo -->
     <div class="flex justify-between items-center mb-4">
       <a href="index.html" class="text-blue-600 hover:underline">← Back to Stories</a>
@@ -85,7 +85,7 @@
         document.getElementById('modal-title').append(svg(ShieldSVG), document.createTextNode(' '+title+' Info'));
         document.getElementById('modal-content').innerHTML =
           `<strong>${title}</strong>
-           <ul class="list-disc ml-5">
+           <ul class="list-disc ml-5 space-y-1 leading-snug">
 		     <li><strong>Family:</strong> ${info.Family || ''}</li>
              <li><strong>Spectrum:</strong> ${info.Spectrum}</li>
              <li><strong>PK:</strong> ${info.PK}</li>
