reduce line spaces

--- a/story.html
+++ b/story.html
@@ -85,7 +85,7 @@
         document.getElementById('modal-title').append(svg(ShieldSVG), document.createTextNode(' '+title+' Info'));
         document.getElementById('modal-content').innerHTML =
           `<strong>${title}</strong>
-           <ul class="list-disc ml-5 space-y-1 leading-snug">
+           <ul class="list-disc ml-5 space-y-0.5 leading-tight">
 		     <li><strong>Family:</strong> ${info.Family || ''}</li>
              <li><strong>Spectrum:</strong> ${info.Spectrum}</li>
              <li><strong>PK:</strong> ${info.PK}</li>
