--- a/story.html
+++ b/story.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-gray-100">
   <div class="container mx-auto px-4 py-6 max-w-2xl">
@@ -85,7 +86,7 @@
         document.getElementById('modal-title').append(svg(ShieldSVG), document.createTextNode(' '+title+' Info'));
         document.getElementById('modal-content').innerHTML =
           `<strong>${title}</strong>
-           <ul class="list-disc ml-5 space-y-0.5 leading-tight">
+           <ul class="list-disc ml-5">
 		     <li><strong>Family:</strong> ${info.Family || ''}</li>
              <li><strong>Spectrum:</strong> ${info.Spectrum}</li>
              <li><strong>PK:</strong> ${info.PK}</li>
