--- a/admintest.html
+++ b/admintest.html
@@ -22,35 +22,35 @@
 
         <!-- MAIN UI ----------------------------------------------------------- -->
         <div id="admin-ui" class="hidden bg-white p-6 rounded shadow space-y-4">
-			<!-- 1️⃣ Create-story button + hidden form -->
-			<div class="mb-4">
-			  <button id="create-story-btn"
-					  class="bg-indigo-500 hover:bg-indigo-600 text-white px-4 py-2 rounded">
-				➕ Create New Story
-			  </button>
+            <!-- 1️⃣ Create-story button + hidden form -->
+            <div class="mb-4">
+                <button id="create-story-btn"
+                        class="bg-indigo-500 hover:bg-indigo-600 text-white px-4 py-2 rounded">
+                    ➕ Create New Story
+                </button>
 
-			  <!-- hidden until clicked -->
-			  <div id="create-story-form" class="mt-4 p-4 bg-gray-50 rounded shadow hidden">
-				<div class="mb-3">
-				  <label for="new-story-subject" class="block font-semibold mb-1">Story Subject</label>
-				  <input id="new-story-subject" type="text"
-						 class="border rounded px-3 py-2 w-full"
-						 placeholder="e.g. ESBL Case" />
-				</div>
-				<div class="mb-3">
-				  <label for="new-story-instr" class="block font-semibold mb-1">
-					Additional Instructions <span class="text-gray-500">(optional)</span>
-				  </label>
-				  <textarea id="new-story-instr" rows="3"
-							class="border rounded px-3 py-2 w-full"
-							placeholder="Give extra context…"></textarea>
-				</div>
-				<button id="new-story-submit"
-						class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded">
-				  Submit
-				</button>
-			  </div>
-			</div>
+                <!-- hidden until clicked -->
+                <div id="create-story-form" class="mt-4 p-4 bg-gray-50 rounded shadow hidden">
+                    <div class="mb-3">
+                        <label for="new-story-subject" class="block font-semibold mb-1">Story Subject</label>
+                        <input id="new-story-subject" type="text"
+                               class="border rounded px-3 py-2 w-full"
+                               placeholder="e.g. ESBL Case" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="new-story-instr" class="block font-semibold mb-1">
+                            Additional Instructions <span class="text-gray-500">(optional)</span>
+                        </label>
+                        <textarea id="new-story-instr" rows="3"
+                                  class="border rounded px-3 py-2 w-full"
+                                  placeholder="Give extra context…"></textarea>
+                    </div>
+                    <button id="new-story-submit"
+                            class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded">
+                        Submit
+                    </button>
+                </div>
+            </div>
 
             <!-- story select -->
             <div>
@@ -101,6 +101,9 @@
         import { getAuth, signInWithPopup, GoogleAuthProvider, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js';
         import { getFirestore, doc, getDoc, setDoc, deleteDoc, serverTimestamp, collection, getDocs } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js';
 
+        /* ----------------------------- ChatGpt -----------------------------*/
+        const chatEndpoint = '/api/chat.js';
+
         /* ---------------------------- Firebase ---------------------------- */
         const firebaseConfig = {
             apiKey: "AIzaSyClEgpGrVTXT2zQNNDBDg0TNX2F24k6oTg",
@@ -125,11 +128,11 @@
         const storyJsonArea = document.getElementById('story-json');
         const uploadBtn = document.getElementById('upload-btn');
         const deleteBtn = document.getElementById('delete-btn');
-		const createBtn     = document.getElementById('create-story-btn');
-		const createForm    = document.getElementById('create-story-form');
-		const subjectInput  = document.getElementById('new-story-subject');
-		const instrInput    = document.getElementById('new-story-instr');
-		const submitBtn     = document.getElementById('new-story-submit');
+        const createBtn = document.getElementById('create-story-btn');
+        const createForm = document.getElementById('create-story-form');
+        const subjectInput = document.getElementById('new-story-subject');
+        const instrInput = document.getElementById('new-story-instr');
+        const submitBtn = document.getElementById('new-story-submit');
 
         const statusMsg = document.getElementById('status-msg');
 
@@ -290,12 +293,12 @@
                 const table = document.createElement('table');
                 table.className = 'table-auto w-full border-collapse';
                 table.innerHTML = `<thead><tr class='bg-gray-50'>
-                                    <th class='border px-2 py-1'>ID</th>
-                                    <th class='border px-2 py-1'>Name</th>
-                                    <th class='border px-2 py-1'>Text</th>
-                                    <th class='border px-2 py-1'>Options (JSON)</th>
-                                    <th class='border px-2 py-1'>Remove</th>
-                                </tr></thead>`;
+                                        <th class='border px-2 py-1'>ID</th>
+                                        <th class='border px-2 py-1'>Name</th>
+                                        <th class='border px-2 py-1'>Text</th>
+                                        <th class='border px-2 py-1'>Options (JSON)</th>
+                                        <th class='border px-2 py-1'>Remove</th>
+                                    </tr></thead>`;
                 const tbody = document.createElement('tbody');
                 Object.entries(data.scenarios || {}).forEach(([id, sc]) => {
                     const tr = document.createElement('tr');
@@ -477,25 +480,77 @@
                 showStatus(e.message, 'text-red-600');
             }
         };
-		
-		/* ------------------------- CREATE STORY ----------------------------------- */
 
-		// 1. Toggle the form when “Create New Story” is clicked
-		createBtn.onclick = () => {
-		  createForm.classList.toggle('hidden');
-		};
+        /* ------------------------- CREATE STORY ----------------------------------- */
 
-		// 2. On Submit, read inputs and pop an alert
-		submitBtn.onclick = () => {
-		  const subject = subjectInput.value.trim();
-		  const instr   = instrInput.value.trim();
-		  alert(
-			`New Story Details:\n` +
-			`• Subject: ${subject || '(none)'}\n` +
-			`• Instructions: ${instr || '(none)'}`
-		  );
-		  // (You can later replace this with your ChatGPT API call + Firestore logic)
-		};
+        // 1. Toggle the form when “Create New Story” is clicked
+        createBtn.onclick = () => {
+            if (!storySelect.value) {
+                alert('Please select an existing story first – it will be used as an example.');
+                return;
+            }
+            createForm.classList.toggle('hidden');
+        };
+
+
+        submitBtn.onclick = async () => {
+            // 1️⃣ Make sure an example story is loaded
+            if (!storySelect.value) {
+                alert('Please select an existing story to use as an example first.');
+                return;
+            }
+
+            // 2️⃣ Gather inputs
+            const subject = subjectInput.value.trim();
+            const instr = instrInput.value.trim();
+            const exampleJson = storyJsonArea.value;
+
+            // 3️⃣ Build the LLM prompt (use your template here)
+            const prompt = `
+                You are an assistant that generates interactive case‐study stories for medical students.
+                Here is an example story JSON (for reference):
+                \`\`\`
+                ${exampleJson}
+                \`\`\`
+
+                Using the same schema, create a brand‐new story JSON with:
+                - Title based on: Subject: ${subject}
+                - Additional instructions (if any): ${instr || 'none'}
+
+                Output **only** the new story’s JSON, ready for Mermaid rendering.
+                  `.trim();
+
+            // 4️⃣ UI feedback
+            submitBtn.disabled = true;
+            statusMsg.textContent = 'Generating new story…';
+            statusMsg.className = 'text-gray-700';
+
+            try {
+                // 5️⃣ Call your serverless function
+                const res = await fetch(chatEndpoint, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ prompt })
+                });
+                const { reply, error } = await res.json();
+                if (error) throw new Error(error);
+
+                // 6️⃣ Load into the textarea & re-render
+                storyJsonArea.value = reply;
+                setupPresentation();
+
+                // 7️⃣ Hide form + success message
+                createForm.classList.add('hidden');
+                statusMsg.textContent = '✅ New story loaded!';
+                statusMsg.className = 'text-green-600';
+            } catch (e) {
+                statusMsg.textContent = `Error: ${e.message}`;
+                statusMsg.className = 'text-red-600';
+            } finally {
+                submitBtn.disabled = false;
+            }
+        };
+
 
     </script>
 </body>
